<resources>
    <string name="app_name">Prayer Cards</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_prayer">Pray now</string>
    <string name="prayer_request_text">Prayer Request Text</string>
    <string name="tags_desc">Tags (separate with commas)</string>
    <string name="new_prayer_card">New Prayer Card</string>
    <string name="in_a_rotation">In a rotation</string>
    <string name="on_a_regular_schedule">On a regular schedule</string>
    <string name="always">Always</string>
    <string name="frequency">How often do you want to see this prayer card?</string>
    <string name="every">Every</string>
    <string name="add">Add</string>
    <string name="add_new_card">Add New Card</string>
    <string name="optional">Optional:</string>
    <string name="limit_views">Limit to </string>
    <string name="views">views.</string>
    <string name="clear_all">Clear All Cards</string>
    <string name="advanced">Advanced:</string>
    <string name="edit_prayer_card">Edit Prayer Card</string>
    <string name="more_views">more views</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="_1">1</string>
    <string name="do_not_show_after">Do not show after: </string>
    <string name="date">Date</string>
    <string name="prayer_request_here_and_this_is_a_very_long_text_to_include">Prayer Request here and this is a very long text to include</string>
    <string name="drag_to_reorder">Drag to reorder</string>
    <string name="delete_all">Delete All</string>
    <string name="filter">Filter</string>
    <string name="must_have_all_tags">Must have all tags</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_cards">Edit Cards</string>
    <string name="select_deck">Select Prayer Plan:</string>
    <string name="edit_deck">Edit Prayer Plan</string>
    <string name="deck_name">Prayer Plan Name</string>
    <string name="how_many_rotation_cards">How many rotation cards?</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="mixed">Mixed</string>
    <string name="location_of_rotation_cards_in_deck">Location of rotation cards in deck:</string>
    <string name="only_include_cards_with_particular_tags">Only include cards with particular tags</string>
    <string name="separate_with_commas">Separate with commas</string>
    <string name="tags">Tags:</string>
    <string name="separate_with_commas2">(Separate with commas)</string>
    <string name="include_all_rotation_cards">Include all rotation cards</string>
    <string name="top_prayer_plan_is_default">Top prayer plan is default</string>
    <string name="set_as_default">Set as default</string>
    <string name="default_prayer_plan">Default Prayer Plan</string>
    <string name="reset_decks">Reset Prayer Plans</string>
    <string name="maximum_rotation_cards_in_deck">Maximum rotation cards in deck:</string>
    <string name="hash">#</string>
    <string name="swipe_for_more_cards"><![CDATA[Swipe for more cards! —>]]></string>
    <string name="prayer_request_contains">Prayer Request contains...</string>
    <string name="add_new_card2">Add New Card</string>
    <string name="card_save_service_desc">A service to save all the prayer cards to a local database in the background</string>
    <string name="deck_save_service_desc">A service to save all the prayer decks to a local database in the background</string>
    <string name="export_import">Export/Import</string>
    <string name="view_answered_prayers">View Answered Prayers</string>
    <string name="include_answered_prayers">Include answered prayers</string>
    <string name="do_not_include_unanswered_prayers">Do not include unanswered prayers</string>
    <string name="answered">Answered</string>
    <string name="unanswered">Unanswered</string>
    <string name="include_answered_prayers_only">Include answered prayers only</string>
</resources>